--- a/game.css
+++ b/game.css
@@ -4,12 +4,15 @@ body {
   height: 100vh;
   width: 100vw;
   align-content: space-around;
-  background-color: #38b5ff;
-  color: #ffca88;
+  /* background-color: #38b5ff; */
+  background: url("./img/mainScreen.png") center no-repeat;
+  background-size: cover;
+  color: #ffd358;
   display: grid;
   justify-content: center;
   font-family: "Montserrat", sans-serif;
   font-size: 1.5rem;
+  /* font-weight: bolder; */
   word-wrap: break-word;
 }
 
