--- a/game.css
+++ b/game.css
@@ -1,11 +1,11 @@
 /* Making full length screens */
 html,
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   align-content: space-around;
-  /* background-color: #38b5ff; */
-  background: url("./img/mainScreen.png") center no-repeat;
+  background-color: #38b5ff;
+  background: url("./img/background.png") center no-repeat;
   background-size: cover;
   color: #ffd358;
   display: grid;
@@ -14,6 +14,10 @@ body {
   font-size: 1.5rem;
   /* font-weight: bolder; */
   word-wrap: break-word;
+}
+
+#user-input {
+  width: 90%;
 }
 
 @media (max-width: 767px) {
